--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,17 @@
 {
   "name": "functions",
+  "version": "1.0.0",
+  "author": "rr.yamamoto@gmail.com",
+  "description": "",
+  "private": true,
+  "license": "MIT",
+  "engines": {
+    "node": "22"
+  },
+  "main": "lib/index.js",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
@@ -10,11 +22,8 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "engines": {
-    "node": "22"
-  },
-  "main": "lib/index.js",
   "dependencies": {
+    "@packages/common": "file:packages-common-1.0.0.tgz",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0"
   },
@@ -24,8 +33,5 @@
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4"
-  },
-  "version": "1.0.0",
-  "author": "rr.yamamoto@gmail.com",
-  "description": ""
+  }
 }
