--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "packages/common"
   ],
   "devDependencies": {
-    "@types/node": "22.12.0",
+    "@types/node": "^22.10.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.1.2",
     "firebase-functions-test": "^3.1.0",
+    "firebase-tools-with-isolate": "^13.29.1-2",
     "typescript": "^5.7.2"
   }
 }
