--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,9 +5,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
   },
+  "types": "lig/index.d.ts",
+  "typings": "lib/index.d.ts",
+  "main": "lib/index.js",
+  "baseUrl": ".",
   "author": "rr.yamamoto@gmail.com",
   "description": "",
   "dependencies": {
     "zod": "^3.24.1"
-  }
+  },
+  "license": "MIT"
 }
